Fixed sidebar spacing

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -178,8 +178,8 @@ body {
         color: #dee4ec;
         width: 15px;
         display: inline-block;
-        padding-top: 10px;
-        padding-bottom: 2px;
+        padding-top: 7px;
+        padding-bottom: 7px;
     }
 
     .wrapper .sidebar ul li a:hover,
